[package]
name = "cipher-paratime"
version = "1.0.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"
license = "Apache-2.0"
resolver = "2"

[package.metadata.fortanix-sgx]
heap-size = 134217728
stack-size = 2097152
threads = 6

[dependencies]
oasis-runtime-sdk = { git = "https://github.com/oasisprotocol/oasis-sdk", branch = "main" }
