[package]
name = "cipher-paratime"
version = "3.0.5"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2021"
license = "Apache-2.0"

[package.metadata.orc.release]
runtime-id = "000000000000000000000000000000000000000000000000e199119c992377cb"

[package.metadata.orc.test]
runtime-id = "0000000000000000000000000000000000000000000000000000000000000000"

[package.metadata.fortanix-sgx]
heap-size = 536870912 # 512 MiB
stack-size = 2097152
threads = 26
debug = false

[dependencies]
keymanager = { git = "https://github.com/oasisprotocol/keymanager-paratime", tag = "v0.4.1" }

# SDK.
oasis-runtime-sdk = { git = "https://github.com/oasisprotocol/oasis-sdk", tag = "runtime-sdk/v0.8.6" }
module-contracts = { git = "https://github.com/oasisprotocol/oasis-sdk", tag = "runtime-sdk/v0.8.6", package = "oasis-runtime-sdk-contracts" }

# Third party.
once_cell = "1.8.0"
