[package]
name = "cipher-paratime"
version = "3.3.3"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2021"
license = "Apache-2.0"

[package.metadata.orc.release]
runtime-id = "000000000000000000000000000000000000000000000000e199119c992377cb"

[package.metadata.orc.test]
runtime-id = "0000000000000000000000000000000000000000000000000000000000000000"

[package.metadata.fortanix-sgx]
heap-size = 536870912 # 512 MiB
stack-size = 2097152
threads = 26
debug = false

[dependencies]
keymanager = { git = "https://github.com/oasisprotocol/keymanager-paratime", tag = "v0.5.0" }

# SDK.
oasis-runtime-sdk = { git = "https://github.com/oasisprotocol/oasis-sdk", tag = "runtime-sdk/v0.14.0" }
module-contracts = { git = "https://github.com/oasisprotocol/oasis-sdk", tag = "runtime-sdk/v0.14.0", package = "oasis-runtime-sdk-contracts" }
module-rofl-market = { git = "https://github.com/oasisprotocol/oasis-sdk", tag = "runtime-sdk/v0.14.0", package = "oasis-runtime-sdk-rofl-market" }

# Third party.
once_cell = "1.8.0"

[features]
# Enables mock SGX in test builds.
debug-mock-sgx = ["oasis-runtime-sdk/debug-mock-sgx"]
